fix: responsive nav on mobile (#26)

--- a/src/layouts/_components.scss
+++ b/src/layouts/_components.scss
@@ -26,7 +26,8 @@
     } 
     @media (max-width: 525px) {
       margin: auto 2.5vw;
-      padding: 10px 10px;
+      padding: 10px 5px;
+      font-size: 14px;
     }
   }
     
